--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,8 @@
+declared-services:
+  discovery-news-service:
+    label: discovery
+    plan: lite
+
 applications:
 - path: .
   name: watson-discovery-news
